18-12-25 commit