@@ -12,19 +12,16 @@ import com.cms.college.models.Course;
 import com.cms.college.models.Department;
 import com.cms.college.reporitories.CourseRepository;
 import com.cms.college.reporitories.DepartmentRepository;
-import com.cms.students.services.StudentQRCodeService;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import java.util.List;
-import java.util.stream.Collectors;
-
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
+
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -40,77 +37,84 @@ public class StudentService {
 	private final StudentQRCodeService studentQRCodeService;
 
 	private final StudentToProfileMapper profileMapper;
+
 	private static final RoleEnum STUDENT_ROLE = RoleEnum.STUDENT;
 	private static final String DEFAULT_PASSWORD = "stud@123";
 
-	/**
-	 * Register a new student (entity as input) Handles: ✔ department resolution
-	 * using code ✔ course resolution using code ✔ student saving ✔ optional photo
-	 * upload ✔ user creation
-	 */
+	// =====================================================
+	// REGISTER STUDENT (COURSE OPTIONAL)
+	// =====================================================
 	@Transactional
 	public Student registerStudent(Student student, MultipartFile photoFile) {
 
-		// -----------------------------------------
-		// 🔍 VALIDATIONS
-		// -----------------------------------------
-
-		// Roll number uniqueness
+		// -------------------------------
+		// VALIDATIONS
+		// -------------------------------
 		if (studentRepository.existsByRollNumber(student.getRollNumber())) {
 			throw new RuntimeException("Roll number already exists: " + student.getRollNumber());
 		}
 
-		// Admission number uniqueness
 		if (studentRepository.existsByAdmissionNumber(student.getAdmissionNumber())) {
-			throw new RuntimeException("Admission number '" + student.getAdmissionNumber() + "' already exists. Please use a different admission number or leave it empty to auto-generate.");
+			throw new RuntimeException(
+					"Admission number '" + student.getAdmissionNumber() + "' already exists.");
 		}
 
-		// -----------------------------------------
-		// 🔄 FETCH department & course using codes
-		// (Assuming student.getDepartment().deptCode is set)
-		// -----------------------------------------
-
-		Department resolvedDept = departmentRepository.findByDepartmentCode(student.getDepartment().getDepartmentCode())
+		// -------------------------------
+		// RESOLVE DEPARTMENT (MANDATORY)
+		// -------------------------------
+		Department resolvedDept = departmentRepository
+				.findByDepartmentCode(student.getDepartment().getDepartmentCode())
 				.orElseThrow(() -> new RuntimeException(
 						"Invalid department code: " + student.getDepartment().getDepartmentCode()));
 
-		Course resolvedCourse = courseRepository.findByCourseCode(student.getCourse().getCourseCode())
-				.orElseThrow(() -> new RuntimeException("Invalid course code: " + student.getCourse().getCourseCode()));
+		// -------------------------------
+		// RESOLVE COURSE (OPTIONAL)
+		// -------------------------------
+		Course resolvedCourse = null;
 
-		// assign actual entities
+		if (student.getCourse() != null
+				&& student.getCourse().getCourseCode() != null
+				&& !student.getCourse().getCourseCode().isBlank()) {
+
+			resolvedCourse = courseRepository
+					.findByCourseCode(student.getCourse().getCourseCode())
+					.orElseThrow(() -> new RuntimeException(
+							"Invalid course code: " + student.getCourse().getCourseCode()));
+		}
+
 		student.setDepartment(resolvedDept);
-		student.setCourse(resolvedCourse);
+		student.setCourse(resolvedCourse); // CAN BE NULL
 
 		Contact contact = student.getContact();
 
-		// -----------------------------------------
-		// 💾 SAVE STUDENT FIRST
-		// -----------------------------------------
+		// -------------------------------
+		// SAVE STUDENT
+		// -------------------------------
 		Student saved = studentRepository.save(student);
 
-		// -----------------------------------------
-		// 📸 OPTIONAL PHOTO UPLOAD
-		// -----------------------------------------
+		// -------------------------------
+		// OPTIONAL PHOTO UPLOAD
+		// -------------------------------
 		if (photoFile != null && !photoFile.isEmpty()) {
 			try {
-				String photoUrl = photoStorageService.storeStudentPhoto(saved.getRollNumber(), photoFile.getBytes());
-
+				String photoUrl = photoStorageService
+						.storeStudentPhoto(saved.getRollNumber(), photoFile.getBytes());
 				saved.setPhotoUrl(photoUrl);
 				saved = studentRepository.save(saved);
-
 			} catch (Exception e) {
 				throw new RuntimeException("Failed to upload student photo", e);
 			}
 		}
 
-		// -----------------------------------------
-		// 👤 CREATE USER ACCOUNT
-		// -----------------------------------------
-		var user = commonUserService.createUser(saved.getRollNumber(), // username
-				STUDENT_ROLE, // role
-				saved.getStudentId(), // referenceId
-				DEFAULT_PASSWORD, // password
-				contact // contact
+		// -------------------------------
+		// CREATE USER ACCOUNT
+		// -------------------------------
+		var user = commonUserService.createUser(
+				saved.getRollNumber(),
+				STUDENT_ROLE,
+				saved.getStudentId(),
+				DEFAULT_PASSWORD,
+				contact
 		);
 
 		if (user == null) {
@@ -120,154 +124,140 @@ public class StudentService {
 		saved.setUser(user);
 		saved = studentRepository.save(saved);
 
-		// -----------------------------------------
-		// 📱 GENERATE QR CODE
-		// -----------------------------------------
+		// -------------------------------
+		// GENERATE QR CODE (NON-BLOCKING)
+		// -------------------------------
 		try {
 			studentQRCodeService.generateQRCodeForStudent(saved);
 			log.info("QR code generated for student: {}", saved.getRollNumber());
 		} catch (Exception e) {
-			log.error("Failed to generate QR code for student: {}", saved.getRollNumber(), e);
-			// Don't throw exception, QR code generation failure shouldn't prevent student registration
+			log.error("QR code generation failed for student: {}", saved.getRollNumber(), e);
 		}
 
-		log.info("Student registered with user + photo + QR: {}", saved.getRollNumber());
+		log.info("Student registered successfully: {}", saved.getRollNumber());
 		return saved;
 	}
 
-	public Student getStudentByRollNumber(String studentRoll) {
-		if (studentRoll == null || studentRoll.trim().isEmpty()) {
-			throw new IllegalArgumentException("Student roll number is required");
-		}
-
-		return studentRepository.findByRollNumber(studentRoll.trim())
-				.orElseThrow(() -> new RuntimeException("Student not found for roll number: " + studentRoll));
-	}
-
-	public Student getStudentById(Long id) {
-		return studentRepository.findById(id)
-				.orElseThrow(() -> new RuntimeException("Student not found for roll number: " + id));
-	}
-
-	@Transactional(readOnly = true)
-	public List<StudentProfileDTO> getAllStudentProfiles() {
-		try {
-			List<Student> students = studentRepository.findAll(); // fetch all students
-			return students.stream().map(profileMapper::toProfileDTO).collect(Collectors.toList());
-		} catch (Exception e) {
-			log.error("Error fetching all student profiles", e);
-			throw new RuntimeException("Failed to fetch student profiles", e);
-		}
-	}
-
-	/**
-	 * Update an existing student
-	 */
+	// =====================================================
+	// UPDATE STUDENT (COURSE OPTIONAL)
+	// =====================================================
 	@Transactional
 	public Student updateStudent(Student student, MultipartFile photoFile) {
-		// Get existing student
-		Student existing = studentRepository.findById(student.getStudentId())
-				.orElseThrow(() -> new RuntimeException("Student not found with ID: " + student.getStudentId()));
 
-		// Resolve department and course
-		Department resolvedDept = departmentRepository.findByDepartmentCode(student.getDepartment().getDepartmentCode())
+		Student existing = studentRepository.findById(student.getStudentId())
+				.orElseThrow(() -> new RuntimeException(
+						"Student not found with ID: " + student.getStudentId()));
+
+		// Resolve Department (MANDATORY)
+		Department resolvedDept = departmentRepository
+				.findByDepartmentCode(student.getDepartment().getDepartmentCode())
 				.orElseThrow(() -> new RuntimeException(
 						"Invalid department code: " + student.getDepartment().getDepartmentCode()));
 
-		Course resolvedCourse = courseRepository.findByCourseCode(student.getCourse().getCourseCode())
-				.orElseThrow(() -> new RuntimeException("Invalid course code: " + student.getCourse().getCourseCode()));
+		// Resolve Course (OPTIONAL)
+		Course resolvedCourse = null;
+		if (student.getCourse() != null
+				&& student.getCourse().getCourseCode() != null
+				&& !student.getCourse().getCourseCode().isBlank()) {
 
-		// Update fields
+			resolvedCourse = courseRepository
+					.findByCourseCode(student.getCourse().getCourseCode())
+					.orElseThrow(() -> new RuntimeException(
+							"Invalid course code: " + student.getCourse().getCourseCode()));
+		}
+
 		student.setDepartment(resolvedDept);
 		student.setCourse(resolvedCourse);
-		
-		// Preserve existing relationships
+
+		// Preserve existing relations
 		student.setUser(existing.getUser());
 		student.setContact(existing.getContact());
 		student.setCreatedAt(existing.getCreatedAt());
 
-		// Update photo if provided
+		// Photo update
 		if (photoFile != null && !photoFile.isEmpty()) {
 			try {
-				String photoUrl = photoStorageService.storeStudentPhoto(student.getRollNumber(), photoFile.getBytes());
+				String photoUrl = photoStorageService
+						.storeStudentPhoto(student.getRollNumber(), photoFile.getBytes());
 				student.setPhotoUrl(photoUrl);
 			} catch (Exception e) {
 				throw new RuntimeException("Failed to upload student photo", e);
 			}
 		} else {
-			// Preserve existing photo
 			student.setPhotoUrl(existing.getPhotoUrl());
 		}
 
 		Student saved = studentRepository.save(student);
-		log.info("Student updated: {}", saved.getRollNumber());
+		log.info("Student updated successfully: {}", saved.getRollNumber());
 		return saved;
 	}
 
-	/**
-	 * Generate a unique roll number based on department code and admission year
-	 */
+	// =====================================================
+	// READ OPERATIONS
+	// =====================================================
+	public Student getStudentByRollNumber(String rollNumber) {
+		if (rollNumber == null || rollNumber.isBlank()) {
+			throw new IllegalArgumentException("Student roll number is required");
+		}
+		return studentRepository.findByRollNumber(rollNumber.trim())
+				.orElseThrow(() -> new RuntimeException(
+						"Student not found for roll number: " + rollNumber));
+	}
+
+	public Student getStudentById(Long id) {
+		return studentRepository.findById(id)
+				.orElseThrow(() -> new RuntimeException("Student not found with ID: " + id));
+	}
+
+	@Transactional(readOnly = true)
+	public List<StudentProfileDTO> getAllStudentProfiles() {
+		return studentRepository.findAll()
+				.stream()
+				.map(profileMapper::toProfileDTO)
+				.collect(Collectors.toList());
+	}
+
+	// =====================================================
+	// ROLL NUMBER GENERATION
+	// =====================================================
 	public String generateRollNumber(String departmentCode, Integer admissionYear) {
-		if (departmentCode == null || departmentCode.trim().isEmpty()) {
+		if (departmentCode == null || departmentCode.isBlank()) {
 			throw new IllegalArgumentException("Department code is required");
 		}
 		if (admissionYear == null || admissionYear < 1900) {
 			throw new IllegalArgumentException("Valid admission year is required");
 		}
 
-		// Extract last 2 digits of year
-		String yearStr = String.valueOf(admissionYear);
-		String yearSuffix;
-		if (yearStr.length() >= 2) {
-			yearSuffix = yearStr.substring(yearStr.length() - 2); // Last 2 digits
-		} else {
-			yearSuffix = String.format("%02d", admissionYear); // Pad with zero if single digit
-		}
+		String yearSuffix = String.valueOf(admissionYear)
+				.substring(String.valueOf(admissionYear).length() - 2);
 
-		// Format: DEPT-YY-XXX (e.g., CSE-24-001)
 		String prefix = departmentCode.toUpperCase() + "-" + yearSuffix + "-";
 		int sequence = 1;
-		String rollNumber = prefix + String.format("%03d", sequence);
+		String rollNumber;
 
-		// Find next available sequence number
-		while (studentRepository.existsByRollNumber(rollNumber)) {
-			sequence++;
-			rollNumber = prefix + String.format("%03d", sequence);
-			
-			// Safety check to prevent infinite loop
-			if (sequence > 999) {
-				throw new RuntimeException("Cannot generate unique roll number. Too many students in this department/year.");
-			}
-		}
+		do {
+			rollNumber = prefix + String.format("%03d", sequence++);
+		} while (studentRepository.existsByRollNumber(rollNumber));
 
 		return rollNumber;
 	}
 
-	/**
-	 * Generate a unique admission number based on admission year
-	 */
+	// =====================================================
+	// ADMISSION NUMBER GENERATION
+	// =====================================================
 	public String generateAdmissionNumber(Integer admissionYear) {
 		if (admissionYear == null || admissionYear < 1900) {
 			throw new IllegalArgumentException("Valid admission year is required");
 		}
 
-		// Format: ADM-YYYY-XXX (e.g., ADM-2024-001)
 		String prefix = "ADM-" + admissionYear + "-";
 		int sequence = 1;
-		String admissionNumber = prefix + String.format("%03d", sequence);
+		String admissionNumber;
 
-		// Find next available sequence number
-		while (studentRepository.existsByAdmissionNumber(admissionNumber)) {
-			sequence++;
-			admissionNumber = prefix + String.format("%03d", sequence);
-			
-			// Safety check to prevent infinite loop
-			if (sequence > 999) {
-				throw new RuntimeException("Cannot generate unique admission number. Too many students in this year.");
-			}
-		}
+		do {
+			admissionNumber = prefix + String.format("%03d", sequence++);
+		} while (studentRepository.existsByAdmissionNumber(admissionNumber));
 
 		return admissionNumber;
 	}
-
 }
